--- a/components/org.wso2.carbon.identity.scim2.provider/src/main/webapp/WEB-INF/web.xml
+++ b/components/org.wso2.carbon.identity.scim2.provider/src/main/webapp/WEB-INF/web.xml
@@ -68,6 +68,10 @@
         <display-name>SCIM2Servlet</display-name>
         <description>SCIM Endpoints</description>
         <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+        <init-param>
+            <param-name>hide-service-list-page</param-name>
+            <param-value>true</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
