--- a/components/org.wso2.carbon.identity.scim2.common/pom.xml
+++ b/components/org.wso2.carbon.identity.scim2.common/pom.xml
@@ -135,6 +135,12 @@
             <artifactId>org.jacoco.agent</artifactId>
             <classifier>runtime</classifier>
         </dependency>
+        <dependency>
+         <groupId>org.apache.felix</groupId>
+         <artifactId>org.apache.felix.scr.annotations</artifactId>
+         <version>1.12.0</version>
+         <scope>provided</scope>
+    	</dependency>
     </dependencies>
     <build>
         <plugins>
@@ -150,7 +156,7 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-scr-plugin</artifactId>
-                <version>1.7.2</version>
+                <version>1.26.2</version>
                 <executions>
                     <execution>
                         <id>generate-scr-scrdescriptor</id>
